[gd_scene load_steps=15 format=2]

[ext_resource path="res://Imagens/Areia da praia com malha quadriculada.png" type="Texture" id=1]
[ext_resource path="res://Imagens/bau-1.png.png" type="Texture" id=2]
[ext_resource path="res://Imagens/bau-2.png.png" type="Texture" id=3]
[ext_resource path="res://Personagem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Minigame1.gd" type="Script" id=5]
[ext_resource path="res://Imagens/Seta_Right.png" type="Texture" id=6]
[ext_resource path="res://Imagens/voltar-1.png.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Seta_Left.png" type="Texture" id=8]
[ext_resource path="res://Imagens/Seta_Down.png" type="Texture" id=9]
[ext_resource path="res://Imagens/Seta_Up.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 26.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32.5, 27 )

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="map_minigame" type="Sprite" parent="."]
position = Vector2( 203, 365 )
scale = Vector2( 0.653884, 0.653883 )
texture = ExtResource( 1 )

[node name="A1" type="Area2D" parent="."]
position = Vector2( 34, 232 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="A1"]
position = Vector2( -9.53674e-07, -0.999998 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="A1"]
position = Vector2( 0, 2.5 )
shape = SubResource( 4 )

[node name="A2" type="Area2D" parent="."]
position = Vector2( 367, 231 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="A2"]
position = Vector2( -1.04904e-05, 0.99999 )
scale = Vector2( 0.4375, 0.4375 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="A2"]
position = Vector2( -0.5, 4 )
shape = SubResource( 5 )

[node name="Button2" type="Button" parent="."]
margin_left = 6.0
margin_top = 5.0
margin_right = 201.0
margin_bottom = 200.0
rect_rotation = 180.0
rect_scale = Vector2( -0.279999, -0.279999 )
icon = ExtResource( 7 )
flat = true

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 55.0
margin_top = 67.0
margin_right = 349.0
margin_bottom = 174.0
theme = SubResource( 2 )
custom_colors/title_color = Color( 0, 0, 0, 1 )
window_title = "Pergunta"

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog"]
modulate = Color( 0.984314, 0.964706, 0.964706, 1 )
margin_left = 11.0
margin_top = 13.0
margin_right = 280.0
margin_bottom = 100.0
theme = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -559.0
margin_top = 515.0
margin_right = 995.0
margin_bottom = 1022.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 766.667, 233.333 )

[node name="Left" type="Button" parent="HBoxContainer"]
margin_right = 382.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 262, 259 )
icon = ExtResource( 8 )
flat = true

[node name="Right" type="Button" parent="HBoxContainer"]
margin_left = 386.0
margin_right = 771.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 262, 259 )
icon = ExtResource( 6 )
flat = true

[node name="Down" type="Button" parent="HBoxContainer"]
margin_left = 775.0
margin_right = 1160.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 262, 259 )
icon = ExtResource( 9 )
flat = true

[node name="Up" type="Button" parent="HBoxContainer"]
margin_left = 1164.0
margin_right = 1554.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 262, 259 )
icon = ExtResource( 10 )
flat = true

[node name="KinematicBody2D" parent="." instance=ExtResource( 4 )]
__meta__ = {
"_edit_group_": true
}

[connection signal="body_entered" from="A1" to="." method="_on_A1_body_entered"]
[connection signal="body_entered" from="A2" to="." method="_on_A2_body_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Left" to="KinematicBody2D" method="_on_Left_pressed"]
[connection signal="pressed" from="HBoxContainer/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="HBoxContainer/Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="HBoxContainer/Up" to="." method="_on_Up_pressed"]
